test/spec/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call_indirect.wast
(;; STDOUT ;;;
out/test/spec/call_indirect.wast:498: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:499: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:500: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:501: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:502: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:508: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:509: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:515: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:516: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:522: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:523: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:529: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:530: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:652: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:657: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:661: assert_trap passed: uninitialized table element
out/test/spec/call_indirect.wast:662: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:663: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:669: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.2.wat:1:122: error: unexpected token "param", expected an expr.
  ...indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const ...
                                        ^^^^^
  out/test/spec/call_indirect/call_indirect.2.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:681: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.3.wat:1:109: error: unexpected token "type", expected an expr.
  ... i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.3.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:693: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.4.wat:1:122: error: unexpected token "type", expected an expr.
  ...indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const ...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.4.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:705: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.5.wat:1:110: error: unexpected token "type", expected an expr.
  ...i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0)...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.5.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:717: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.6.wat:1:110: error: unexpected token "param", expected an expr.
  ...i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0)...
                                        ^^^^^
  out/test/spec/call_indirect/call_indirect.6.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:729: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.7.wat:1:67: error: unexpected token "param", expected an expr.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                          ^^^^^
  out/test/spec/call_indirect/call_indirect.7.wat:1:106: error: unexpected token ), expected EOF.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/call_indirect.wast:739: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.8.wat:1:46: error: unexpected token $x, expected ).
  ...e 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                             ^^
  out/test/spec/call_indirect/call_indirect.8.wat:1:82: error: unexpected token ), expected EOF.
  ...e 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/call_indirect.wast:746: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.9.wat:1:57: error: expected 0 results, got 1
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:756: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.10.wat:1:82: error: expected 1 arguments, got 0
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:766: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.11.wat:1:69: error: expected 1 results, got 0
  ...i32)))(table 0 funcref)(func  (call_indirect (type $sig) (param i32) (i32....
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:776: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.12.wat:1:86: error: expected 2 arguments, got 1
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (param i32) (resu...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:791: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.13.wasm:000001c: error: table variable out of range: 0 (max 0)
  000001c: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:799: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.14.wasm:0000023: error: type mismatch in i32.eqz, expected [i32] but got []
  0000023: error: OnConvertExpr callback failed
out/test/spec/call_indirect.wast:807: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.15.wasm:0000027: error: type mismatch in i32.eqz, expected [i32] but got [i64]
  0000027: error: OnConvertExpr callback failed
out/test/spec/call_indirect.wast:816: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.16.wasm:0000026: error: type mismatch in call_indirect, expected [i32] but got []
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:824: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.17.wasm:0000027: error: type mismatch in call_indirect, expected [f64, i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:832: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.18.wasm:0000025: error: type mismatch at end of function, expected [] but got [i32]
  0000025: error: EndFunctionBody callback failed
out/test/spec/call_indirect.wast:840: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.19.wasm:000002e: error: type mismatch at end of function, expected [] but got [f64, i32]
  000002e: error: EndFunctionBody callback failed
out/test/spec/call_indirect.wast:851: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.20.wasm:0000027: error: type mismatch in call_indirect, expected [i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:859: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.21.wasm:0000028: error: type mismatch in call_indirect, expected [i32] but got [... i64]
  0000028: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:868: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.22.wasm:000002a: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:878: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.23.wasm:000002a: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:888: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.24.wasm:0000032: error: type mismatch in call_indirect, expected [i32, f64] but got [f64, i32]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:898: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.25.wasm:0000032: error: type mismatch in call_indirect, expected [f64, i32] but got [i32, f64]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:909: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.26.wasm:0000036: error: type mismatch in call_indirect, expected [i32] but got []
  0000036: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:922: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.27.wasm:0000039: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  0000039: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:935: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.28.wasm:0000036: error: type mismatch in call_indirect, expected [i32] but got []
  0000036: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:948: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.29.wasm:0000039: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  0000039: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:961: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.30.wasm:000003a: error: type mismatch in call_indirect, expected [i32] but got []
  000003a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:977: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.31.wasm:000003d: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000003d: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:997: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.32.wasm:0000022: error: function type variable out of range: 1 (max 1)
  0000022: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:1004: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.33.wasm:0000026: error: function type variable out of range: 1012321300 (max 1)
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:1015: assert_invalid passed:
  out/test/spec/call_indirect/call_indirect.34.wasm:0000018: error: function variable out of range: 0 (max 0)
  0000018: error: OnElemSegmentElemExpr_RefFunc callback failed
169/169 tests passed.
;;; STDOUT ;;)
